# internal/httpapi/router.go
@@ -35,6 +35,7 @@ func (a *API) Handler() http.Handler {
 	v1.GET("/me", gin.WrapF(a.getMe))
 	v1.GET("/me/sessions", gin.WrapF(a.getMySessions))
 	v1.GET("/me/tables", gin.WrapF(a.getMyTables))
+	v1.GET("/me/scoring-rules", gin.WrapF(a.getMyRules))
 	v1.GET("/me/avatar", gin.WrapF(a.getMyAvatar))
 	v1.PUT("/me/avatar", gin.WrapF(a.saveMyAvatar))
 	v1.DELETE("/me/avatar", gin.WrapF(a.deleteMyAvatar))
@@ -53,10 +54,8 @@ func (a *API) Handler() http.Handler {
 	v1.DELETE("/scheduled-games/:id", gin.WrapF(a.deleteScheduledGame))
 
 	v1.POST("/scoring-rules", gin.WrapF(a.createRule))
-	v1.GET("/scoring-rules", func(c *gin.Context) { a.listRules(c.Writer) })
+	v1.GET("/scoring-rules", gin.WrapF(a.listRules))
 	v1.GET("/community/scoring-rules", gin.WrapF(a.searchPublicRules))
-	v1.POST("/scoring-rules/:id/pdf-imports", gin.WrapF(a.createPDFImport))
-	v1.GET("/pdf-imports/:id", gin.WrapF(a.getPDFImport))
 	v1.GET("/bgg/collections/:username", gin.WrapF(a.getBGGCollection))
 	v1.GET("/bgg/search", rateLimit(15, time.Minute, time.Now), gin.WrapF(a.searchBGG))
 	v1.GET("/bgg/games/:id/rules", gin.WrapF(a.getBGGRules))
